# sound-garden-0x1

./: Cargo.toml
audio_graph/: Cargo.toml
audio_graph/src/: graph.rs  lib.rs  module.rs  stack.rs
audio_modules/: Cargo.toml
audio_modules/src/: biquad.rs  constant.rs  convolution.rs  delay.rs  feedback.rs  filters.rs  function.rs  input.rs  lib.rs  metro.rs  noise.rs  osc.rs  pan.rs  parameter.rs  phasor.rs  pulse.rs  pure.rs  sample_and_hold.rs  spectral_transform.rs  yin.rs  zip.rs
audio_modules/src/envelopes/: impulse.rs
audio_stack/: Cargo.toml
audio_stack/src/: lib.rs
play_stack/: Cargo.toml
play_stack/src/: main.rs
sound_garden/: Cargo.toml
sound_garden/src/: main.rs
vst_stack/: .gitignore  Cargo.toml  Makefile
vst_stack/src/: context.rs  editor.rs  lib.rs
