[package]
name = "audio_modules"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

[dependencies]
audio_graph = { path = "../audio_graph" }
itertools = "0.8.0"
rustfft = "3.0.0"
apodize = "1.0.0"

[dependencies.rand]
version = "0.7.2"
features = ["small_rng"]
