[package]
name = "sound_garden"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.10.0"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf", "gfx"]
