[package]
name = "vst_stack"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

[dependencies]
audio_graph = { path = "../audio_graph" }
audio_modules = { path = "../audio_modules" }
audio_stack = { path = "../audio_stack" }
chrono = "0.4.9"
cocoa = "0.19.1"
dirs = "2.0.2"
notify = "4.0.14"
objc = "0.2.7"
parking_lot = "0.9.0"
rand = "0.7.2"
vst = "0.1.0"

[lib]
name = "soundgarden"
crate-type = ["cdylib"]
